--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="video-background">
         <video autoplay muted loop>
-            <source src="C:\Users\John François Daniel\Desktop\Biiigo\media\video code.mp4" type="video/mp4">
+            <source src="https://videos.pexels.com/video-files/7989701/7989701-hd_1920_1080_25fps.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
         <div class="overlay"></div>
